# MicroLLM

./: .gitignore  README.md  data.py  main.ipynb  main.py  modeling.py  pyproject.toml  trainer.py
nanochat/: dataloader.py  tokenizer.py
